--- a/app/client/index.css
+++ b/app/client/index.css
@@ -1,19 +1,21 @@
 body {
+    min-height: 100vh;
     background-color: #101010;
     margin: 0;
     font-family: 'Source Code Pro', monospace;
     font-size: 16px;
+    display: flex;
+    justify-content: center;
 }
 .chat-box {
     display: grid;
     grid-template-rows: 1fr auto;
-    width: 500px;
-    height: 600px;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: calc(100vw - 100px);
+    height: calc(100vh - 100px);
+    max-width: 800px;
     box-shadow: 0 0 5px rgb(210, 241, 255);
     background-color: rgb(210, 241, 255);
-    margin: 10px;
+    margin: 50px;
 }
 .messages {
     display: flex;
@@ -48,10 +50,7 @@ span.user {
     color: rgb(var(--me-color));
 }
 .logout.message {
-    color: rgba(var(--user-color), .5);
-}
-.logout.message.me {
-    color: rgba(var(--me-color), .5);
+    color: rgb(118, 43, 29);
 }
 .error.message {
     color: rgb(176, 46, 46);
@@ -67,7 +66,26 @@ span.user {
     border: none;
     background-color: inherit;
     font-size: inherit;
+    color: rgb(0, 0, 0);
 }
 .user-input input:focus {
     outline: none;
+}
+.user-input input::placeholder {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (max-width: 750px) {
+    .chat-box {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+    }
+}
+@media only screen and (max-height: 600px) {
+    .chat-box {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+    }
 }
