--- a/app/client/index.css
+++ b/app/client/index.css
@@ -83,15 +83,13 @@ span.user {
 }
 .user-input input[type="submit"] {
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.7);
-    border: outset rgba(255, 255, 255, 0.4);
-    border-radius: 2px;
-    border-width: 2px;
-    padding: 4px 13px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 1px black;
+    padding: 6px 15px;
 }
 .user-input input[type="submit"]:active {
-    border-style: inset;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 750px) {
