--- a/app/client/index.css
+++ b/app/client/index.css
@@ -22,12 +22,14 @@ body {
 button.reconnect {
     position: absolute;
     background-color: transparent;
+    color: rgba(0, 0, 0, 1);
+    text-shadow: 0 0 1px black;
     border: none;
     top: 0;
     right: 0;
     padding: 5px;
-    margin: 5px;
-    font-size: 25px;
+    margin: 6px;
+    font-size: 23px;
     transition-property: transform;
     transition-duration: .8s;
     transition-timing-function: ease-out;
@@ -112,7 +114,6 @@ span.user {
     background-color: rgba(0, 0, 0, 0.4);
     box-shadow: 0 0 1px black;
     padding: 6px 15px;
-<<<<<<< HEAD
 
     /* override user agent stylesheets on mobile */
     -webkit-appearance: none;
@@ -121,8 +122,6 @@ span.user {
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
     margin: 0;
-=======
->>>>>>> 3eb26a873fb5aba488ff7e309e94bc9203130b98
 }
 .user-input input[type="submit"]:active {
     background-color: rgba(0, 0, 0, 0.5);
