--- a/app/client/index.css
+++ b/app/client/index.css
@@ -128,6 +128,9 @@ span.user {
 }
 
 @media only screen and (max-width: 750px) {
+    button.reconnect {
+        position: fixed;
+    }
     .chat-box {
         width: 100vw;
         height: 100vh;
@@ -135,6 +138,9 @@ span.user {
     }
 }
 @media only screen and (max-height: 600px) {
+    button.reconnect {
+        position: fixed;
+    }
     .chat-box {
         width: 100vw;
         height: 100vh;
