--- a/app/client/index.css
+++ b/app/client/index.css
@@ -1,23 +1,28 @@
 body {
-    min-height: 100vh;
-    background-color: #101010;
     margin: 0;
+    padding: 50px;
+    box-sizing: border-box;
+    height: 100vh;
+    width: 100vw;
+    background-color: #101010;
     font-family: 'Krub', sans-serif;
     font-size: 16px;
+
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .chat-box {
     position: relative;
     display: grid;
     grid-template-rows: 1fr auto;
-    width: calc(100vw - 100px);
-    height: calc(100vh - 100px);
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     max-width: 800px;
     --box-color: rgb(210, 241, 255);
     box-shadow: 0 0 5px var(--box-color);
     background-color: var(--box-color);
-    margin: 50px;
 }
 button.reconnect {
     position: absolute;
@@ -128,22 +133,13 @@ span.user {
 }
 
 @media only screen and (max-width: 750px) {
+    body {
+        padding: 0;
+    }
     button.reconnect {
         position: fixed;
     }
     .chat-box {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-    }
-}
-@media only screen and (max-height: 600px) {
-    button.reconnect {
-        position: fixed;
-    }
-    .chat-box {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
+        max-width: none;
     }
 }
