--- a/app/client/index.css
+++ b/app/client/index.css
@@ -123,6 +123,7 @@ span.user {
 }
 .user-input input[type="submit"] {
     box-sizing: border-box;
+    font-size: inherit;
     color: rgba(255, 255, 255, 0.9);
     background-color: rgba(0, 0, 0, 0.4);
     /* box-shadow: 0 0 1px black; */
@@ -149,5 +150,8 @@ span.user {
     }
     .chat-box {
         max-width: none;
+    }
+    .user-input {
+        font-size: 18px;
     }
 }
