--- a/app/client/index.css
+++ b/app/client/index.css
@@ -6,7 +6,7 @@ body {
     width: 100vw;
     background-color: #101010;
     font-family: 'Krub', sans-serif;
-    font-size: 16px;
+    font-size: 17px;
 
     display: flex;
     justify-content: center;
@@ -20,8 +20,8 @@ body {
     width: 100%;
     height: 100%;
     max-width: 800px;
-    --box-color: rgb(210, 241, 255);
-    box-shadow: 0 0 1px var(--box-color);
+    --box-color: rgb(242, 251, 255);
+    box-shadow: 0 0 5px var(--box-color);
     background-color: var(--box-color);
     border-radius: 2px;
 }
@@ -51,41 +51,45 @@ button.reconnect:active {
 button.reconnect:focus {
     outline: none;
 }
+
 .messages {
     display: flex;
     flex-direction: column-reverse;
-    overflow: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     word-break: break-word;
-    /* --user-color: 133, 77, 182;
-    --me-color: 0, 140, 114; */
 }
 .message {
     padding: 8px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
 .message:nth-last-child(even) {
     background-color: rgba(0, 0, 0, 0.1);
 }
 .message span {
     font-weight: bold;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .7);
+    letter-spacing: 0.5px;
 }
+
 /* colors */
 .me {
-    color: rgb(0, 140, 114);
+    color: rgb(1, 205, 167);
 }
 .blue {
-    color: rgb(2, 45, 186);
+    color: rgb(1, 50, 213);
 }
 .gray {
-    color: rgba(0, 0, 0, 0.7);
+    color: rgb(85, 85, 85);
 }
 .orange {
     color: rgb(255, 119, 0);
 }
 .dm {
-    color: rgb(174, 170, 42);
+    color: rgb(255, 247, 0);
 }
 .user {
-    color: rgb(133, 77, 182);
+    color: rgb(162, 94, 222);
 }
 .logout {
     color: rgb(118, 43, 29)
@@ -93,33 +97,9 @@ button.reconnect:focus {
 .error {
     color: rgb(176, 46, 46);
 }
-/* span.me {
-    color: rgb(var(--me-color));
-}
-span.user {
-    color: rgb(var(--user-color));
-}
-.server-msg.message {
-    color: rgba(0, 0, 0, 0.5);
-}
-.info.message {
-    color: rgba(255, 119, 0, 1);
-}
-.login.message {
-    color: rgb(var(--user-color));
-}
-.login.message.me {
-    color: rgb(var(--me-color));
-}
-.logout.message {
-    color: rgb(118, 43, 29);
-}
-.error.message {
-    color: rgb(176, 46, 46);
-} */
+
 .user-input {
     background-color: rgba(16, 16, 16, 0.7);
-    /* box-shadow: 0 0 1px black; */
     display: grid;
     grid-template-columns: auto 1fr auto;
     color: rgba(255, 255, 255, 0.75);
@@ -154,10 +134,9 @@ span.user {
     font-size: inherit;
     color: rgba(255, 255, 255, 0.9);
     background-color: rgba(0, 0, 0, 0.4);
-    /* box-shadow: 0 0 1px black; */
     padding: 6px 15px;
 
-    /* override user agent stylesheets on mobile */
+    /* overriding user agent stylesheets on mobile */
     -webkit-appearance: none;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -174,6 +153,7 @@ span.user {
         padding: 0;
     }
     button.reconnect {
+        text-shadow: 0 0 1px var(--box-color);
         position: fixed;
     }
     .chat-box {
