--- a/app/client/index.css
+++ b/app/client/index.css
@@ -9,9 +9,18 @@ body {
     font-size: 17px;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+#size-slider {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 800px;
+    padding: 20px;
+}
+
 .chat-box {
     position: relative;
     overflow: hidden;
@@ -26,7 +35,13 @@ body {
     background-color: var(--box-color);
     border-radius: 5px;
 }
+
 button.reconnect {
+    --in-speed: 60ms;
+    --out-speed: 150ms;
+    --size: 40px;
+    --font-size: calc(var(--size) * .6);
+    cursor: pointer;
     position: absolute;
     background-color: transparent;
     color: rgba(0, 0, 0, 1);
@@ -34,20 +49,46 @@ button.reconnect {
     border: none;
     top: 0;
     right: 0;
-    padding: 5px;
-    margin: 6px;
-    font-size: 23px;
+    margin: calc(var(--size) * .20);
+    font-size: var(--font-size);
+    width: var(--size);
+    height: var(--size);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: transform .3s ease-out, padding .05s ease-in-out, font-size .05s ease-in-out;
     border-radius: 50%;
+    transition:
+        transform calc(var(--out-speed) * 1.5) ease-in-out,
+        padding var(--out-speed) ease-in-out,
+        font-size var(--out-speed) ease-in-out,
+        background-color var(--out-speed) ease-in-out,
+        box-shadow var(--out-speed) ease-in-out;
 }
+
 button.reconnect:hover {
-    cursor: pointer;
-    transform: rotate(360deg);
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 3px black;
+    transition:
+        transform calc(var(--out-speed) * 1.5) ease-in-out,
+        padding var(--out-speed) ease-in-out,
+        font-size var(--out-speed) ease-in-out,
+        background-color var(--out-speed) ease-in-out,
+        box-shadow var(--out-speed) ease-in-out;
 }
+
 button.reconnect:active {
-    font-size: 26px;
-    padding: 3px;
+    font-size: calc(var(--font-size) * (8 / 9));
+    transform: rotate(-365deg);
+    background-color: rgba(0, 0, 0, 0.3);
+    transition:
+        transform 0ms,
+        padding var(--in-speed) ease-in-out,
+        font-size var(--in-speed) ease-in-out,
+        background-color var(--in-speed) ease-in-out,
+        box-shadow var(--in-speed) ease-in-out;
 }
+
 button.reconnect:focus {
     outline: none;
 }
@@ -59,13 +100,16 @@ button.reconnect:focus {
     -webkit-overflow-scrolling: touch;
     word-break: break-word;
 }
+
 .message {
     padding: 8px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
 }
+
 .message:nth-last-child(even) {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
 .message span {
     font-weight: bold;
 }
@@ -74,24 +118,31 @@ button.reconnect:focus {
 .me {
     color: rgb(0, 187, 153);
 }
+
 .blue {
     color: rgb(0, 60, 255);
 }
+
 .gray {
     color: rgb(85, 85, 85);
 }
+
 .orange {
     color: rgb(223, 104, 0);
 }
+
 .dm {
     color: rgb(255, 0, 140);
 }
+
 .user {
     color: rgb(164, 91, 228);
 }
+
 .logout {
     color: rgb(145, 38, 19)
 }
+
 .error {
     color: rgb(218, 43, 43);
 }
@@ -102,7 +153,9 @@ button.reconnect:focus {
     grid-template-columns: auto 1fr auto;
     color: rgba(255, 255, 255, 0.75);
 }
-.user-input span, .user-input input {
+
+.user-input span,
+.user-input input {
     padding: 6px;
     margin: 0;
     border: none;
@@ -111,17 +164,21 @@ button.reconnect:focus {
     font-family: inherit;
     color: inherit;
 }
+
 .user-input span {
     padding-right: 0;
     display: flex;
     align-items: center;
 }
+
 .user-input input:focus {
     outline: none;
 }
+
 .user-input input::placeholder {
     color: rgba(255, 255, 255, 0.2);
 }
+
 .user-input input[type="submit"] {
     box-sizing: border-box;
     font-size: inherit;
@@ -134,6 +191,7 @@ button.reconnect:focus {
     border-radius: 0px;
     margin: 0;
 }
+
 .user-input input[type="submit"]:active {
     background-color: rgba(0, 0, 0, 0.5);
 }
@@ -142,40 +200,85 @@ button.reconnect:focus {
     body {
         padding: 0;
     }
+
     button.reconnect {
-	position: relative;
-	font-size: 32px;
-	padding: 20px;
-	margin: 0;
-	width: 100%;
-        z-index: 1;
-	border-radius: 0px;
+        position: relative;
+        font-size: 32px;
+        padding: 20px;
+        width: auto;
+        height: auto;
+        display: initial;
+        margin: 0;
+        --out-speed: 200ms;
+        transition: transform calc(var(--out-speed) * 1.5) ease-in-out;
     }
+
     button.reconnect:hover {
-    	transform: none;
+        transform: none;
+        background: none;
+        box-shadow: none;
     }
+
     button.reconnect:active {
-    	font-size: 30px;
-	padding: 21px;
+        font-size: 32px;
+        padding: 20px;
+        transform: rotate(-360deg);
+        background: none;
+        box-shadow: none;
+        transition: transform 0ms;
     }
+
+    button.reconnect::after {
+        content: "";
+        position: absolute;
+        top: 15%;
+        bottom: 15%;
+        right: 15%;
+        left: 15%;
+        border-radius: 50%;
+        transition:
+            background-color var(--out-speed) ease-in-out,
+            box-shadow var(--out-speed) ease-in-out,
+            top var(--out-speed) ease-in-out,
+            right var(--out-speed) ease-in-out,
+            bottom var(--out-speed) ease-in-out,
+            left var(--out-speed) ease-in-out;
+    }
+
+    button.reconnect:active::after {
+        background-color: rgba(0, 0, 0, .2);
+        box-shadow: 0 0 3px black;
+        top: 7%;
+        right: 7%;
+        bottom: 7%;
+        left: 7%;
+        transition:
+            background-color var(--in-speed) ease-in-out,
+            box-shadow var(--in-speed) ease-in-out,
+            top var(--in-speed) ease-in-out,
+            right var(--in-speed) ease-in-out,
+            bottom var(--in-speed) ease-in-out,
+            left var(--in-speed) ease-in-out;
+    }
+
     .chat-box {
-	width: 100vw;
-	height: 100vh;
+        width: 100vw;
+        height: 100vh;
         max-width: none;
-	border-radius: 0px;
-	grid-template-rows: 1fr auto auto;
+        border-radius: 0px;
+        grid-template-rows: 1fr auto auto;
     }
+
     .user-input {
         font-size: 18px;
     }
+
     .mobile-menu {
+        position: relative;
         display: flex;
-	justify-content: center;
-	background-color: #f0f0f0;
-	box-shadow: 0 0 3px #000000;
-	transition: background-color .05s ease-in-out;
-    }
-    .mobile-menu:active {
-    	background-color: #e0e0e0;
+        justify-content: center;
+        background-color: #f0f0f0;
+        box-shadow: 0 0 3px #000000;
+        transition: background-color .05s ease-in-out;
     }
 }
