--- a/app/client/index.css
+++ b/app/client/index.css
@@ -1,4 +1,6 @@
 body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
     margin: 0;
     padding: 50px;
     box-sizing: border-box;
@@ -59,7 +61,7 @@ button.reconnect {
     transition: transform .3s ease-out, padding .05s ease-in-out, font-size .05s ease-in-out;
     border-radius: 50%;
     transition:
-        transform calc(var(--out-speed) * 1.5) ease-in-out,
+        transform calc(var(--out-speed) * 1.8) ease-in-out,
         padding var(--out-speed) ease-in-out,
         font-size var(--out-speed) ease-in-out,
         background-color var(--out-speed) ease-in-out,
@@ -70,7 +72,7 @@ button.reconnect:hover {
     background-color: rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 3px black;
     transition:
-        transform calc(var(--out-speed) * 1.5) ease-in-out,
+        transform calc(var(--out-speed) * 1.8) ease-in-out,
         padding var(--out-speed) ease-in-out,
         font-size var(--out-speed) ease-in-out,
         background-color var(--out-speed) ease-in-out,
@@ -209,14 +211,16 @@ button.reconnect:focus {
         height: auto;
         display: initial;
         margin: 0;
-        --out-speed: 200ms;
-        transition: transform calc(var(--out-speed) * 1.5) ease-in-out;
+        transition: transform calc(var(--out-speed) * 1.8) ease-in-out;
+        -webkit-transition: transform calc(var(--out-speed) * 1.8) ease-in-out;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
     }
 
     button.reconnect:hover {
-        transform: none;
         background: none;
         box-shadow: none;
+        transition: transform calc(var(--out-speed) * 1.8) ease-in-out;
+        -webkit-transition: transform calc(var(--out-speed) * 1.8) ease-in-out;
     }
 
     button.reconnect:active {
@@ -226,6 +230,7 @@ button.reconnect:focus {
         background: none;
         box-shadow: none;
         transition: transform 0ms;
+        -webkit-transition: transform 0ms;
     }
 
     button.reconnect::after {
@@ -237,28 +242,42 @@ button.reconnect:focus {
         left: 15%;
         border-radius: 50%;
         transition:
-            background-color var(--out-speed) ease-in-out,
-            box-shadow var(--out-speed) ease-in-out,
-            top var(--out-speed) ease-in-out,
-            right var(--out-speed) ease-in-out,
-            bottom var(--out-speed) ease-in-out,
-            left var(--out-speed) ease-in-out;
+	    background var(--out-speed) ease-in-out,
+	    box-shadow var(--out-speed) ease-in-out,
+	    top var(--out-speed) ease-in-out,
+	    right var(--out-speed) ease-in-out,
+	    bottom var(--out-speed) ease-in-out,
+	    left var(--out-speed) ease-in-out;
+ 	-webkit-transition:
+	    background var(--out-speed) ease-in-out,
+	    box-shadow var(--out-speed) ease-in-out,
+	    top var(--out-speed) ease-in-out,
+	    right var(--out-speed) ease-in-out,
+	    bottom var(--out-speed) ease-in-out,
+	    left var(--out-speed) ease-in-out;
     }
 
     button.reconnect:active::after {
         background-color: rgba(0, 0, 0, .2);
         box-shadow: 0 0 3px black;
-        top: 7%;
-        right: 7%;
-        bottom: 7%;
-        left: 7%;
+        top: 5%;
+        right: 5%;
+        bottom: 5%;
+        left: 5%;
         transition:
-            background-color var(--in-speed) ease-in-out,
-            box-shadow var(--in-speed) ease-in-out,
-            top var(--in-speed) ease-in-out,
-            right var(--in-speed) ease-in-out,
-            bottom var(--in-speed) ease-in-out,
-            left var(--in-speed) ease-in-out;
+	    background var(--in-speed) ease-in-out,
+	    box-shadow var(--in-speed) ease-in-out,
+	    top var(--in-speed) ease-in-out,
+	    right var(--in-speed) ease-in-out,
+	    bottom var(--in-speed) ease-in-out,
+	    left var(--in-speed) ease-in-out;
+        -webkit-transition:
+	    background var(--in-speed) ease-in-out,
+	    box-shadow var(--in-speed) ease-in-out,
+	    top var(--in-speed) ease-in-out,
+	    right var(--in-speed) ease-in-out,
+	    bottom var(--in-speed) ease-in-out,
+	    left var(--in-speed) ease-in-out;
     }
 
     .chat-box {
@@ -279,6 +298,6 @@ button.reconnect:focus {
         justify-content: center;
         background-color: #f0f0f0;
         box-shadow: 0 0 3px #000000;
-        transition: background-color .05s ease-in-out;
+	padding-bottom: 12px;
     }
 }
